[package]
name = "ssm"
version = "0.1.0"
edition = "2021"
description = "SSH session manager"

[[bin]]
name = "ssm"
path = "src/main.rs"

[lib]
name = "ssm"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui    = "0.29"
crossterm  = "0.28"

# CLI
clap       = { version = "4", features = ["derive"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# OS keychain (macOS: Security framework, Linux: secret-service)
keyring    = { version = "3", features = ["apple-native", "sync-secret-service"] }

# Error handling
anyhow     = "1"

# Platform dirs (~/.config etc.)
dirs       = "5"

[dev-dependencies]
tempfile   = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"    # minimize binary size
lto       = true
strip     = true
