[package]
name = "ssm"
version = "1.0.0"
edition = "2021"
description = "SSH session manager"

[[bin]]
name = "ssm"
path = "src/main.rs"

[lib]
name = "ssm"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui    = "0.29"
crossterm  = "0.28"

# CLI
clap       = { version = "4", features = ["derive"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# OS keychain (macOS: Security framework, Linux: secret-service)
keyring    = { version = "3", features = ["apple-native", "sync-secret-service"] }

# Self-update: HTTP client (pure-Rust rustls TLS, no OpenSSL) + tarball extract.
ureq       = { version = "2", default-features = false, features = ["tls", "json"] }
flate2     = "1"
tar        = "0.4"
sha2       = "0.10"

# Error handling
anyhow     = "1"

# Platform dirs (~/.config etc.)
dirs       = "5"

[dev-dependencies]
tempfile   = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"    # minimize binary size
lto       = true
strip     = true
